; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_resource.c_is_memory.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_resource.c_is_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_resource = type { i32 }
%struct.resource_win = type { %struct.resource }
%struct.resource = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_resource*, i8*)* @is_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_memory(%struct.acpi_resource* %0, i8* %1) #0 {
  %3 = alloca %struct.acpi_resource*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.resource_win, align 4
  %6 = alloca %struct.resource*, align 8
  store %struct.acpi_resource* %0, %struct.acpi_resource** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = getelementptr inbounds %struct.resource_win, %struct.resource_win* %5, i32 0, i32 0
  store %struct.resource* %7, %struct.resource** %6, align 8
  %8 = call i32 @memset(%struct.resource_win* %5, i32 0, i32 4)
  %9 = load %struct.acpi_resource*, %struct.acpi_resource** %3, align 8
  %10 = load %struct.resource*, %struct.resource** %6, align 8
  %11 = call i64 @acpi_dev_resource_memory(%struct.acpi_resource* %9, %struct.resource* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %21, label %13

13:                                               ; preds = %2
  %14 = load %struct.acpi_resource*, %struct.acpi_resource** %3, align 8
  %15 = call i64 @acpi_dev_resource_address_space(%struct.acpi_resource* %14, %struct.resource_win* %5)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %13
  %18 = load %struct.acpi_resource*, %struct.acpi_resource** %3, align 8
  %19 = call i64 @acpi_dev_resource_ext_address_space(%struct.acpi_resource* %18, %struct.resource_win* %5)
  %20 = icmp ne i64 %19, 0
  br label %21

21:                                               ; preds = %17, %13, %2
  %22 = phi i1 [ true, %13 ], [ true, %2 ], [ %20, %17 ]
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  ret i32 %24
}

declare dso_local i32 @memset(%struct.resource_win*, i32, i32) #1

declare dso_local i64 @acpi_dev_resource_memory(%struct.acpi_resource*, %struct.resource*) #1

declare dso_local i64 @acpi_dev_resource_address_space(%struct.acpi_resource*, %struct.resource_win*) #1

declare dso_local i64 @acpi_dev_resource_ext_address_space(%struct.acpi_resource*, %struct.resource_win*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
